@@ -1,3 +1,7 @@
+2004-12-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
+
+	* include/nucleus/asm-*/hal.h : got rid of rthal_cpu_relax.
+
 2004-12-28  Philippe Gerum  <rpm@xenomai.org>
 
 	* arch/*/hal/hal.c (__rthal_init): Fix error return values.
